[package]
name = "il_manifesto"
version = "0.1.0"
edition = "2021"

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
#static_ssl = ['openssl/vendored']

[dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
#openssl = { version = "0.10" }
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "cookies", "stream"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
zip = "=0.5"
time = "=0.3.12"
epub = { version = "1.2.1" }
epub-builder = "0.6"
clap = { version = "4.3.21", features = ["derive"] }
bytes = { version = "0.5.6" }

